--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
   </head>
   <body>
     <!-- HEADER-->
-    <header class="component__header">
-      <nav class="component__nav bd-container"><a class="component__nav-logo" href="">Travel</a>
-        <div class="component__nav-menu" id="nav-menu">
-          <ul class="component__nav-list">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Explore</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Destinations</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Hotels</a></li>
+    <header class="header">
+      <nav class="header-nav bd-container"><a class="header-nav__logo" href="">Travel</a>
+        <div class="header-nav__menu" id="nav-menu">
+          <ul class="header-nav__list">
+            <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Explore</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Destinations</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Hotels</a></li>
           </ul>
         </div>
+        <div class="header-nav__toggle" id="nav-toggle"><i class="bx bx-menu"></i></div>
       </nav>
     </header>
+    <!-- main-->
+    <main class="main"></main>
     <!-- GSAP-->
     <script src="./node_modules/gsap/dist/gsap.min.js"> </script>
     <!-- SWIPER JS-->
