--- a/index.html
+++ b/index.html
@@ -28,7 +28,49 @@
       </nav>
     </header>
     <!-- main-->
-    <main class="main"></main>
+    <main class="main">
+      <div> 
+        <div>
+          <!--islands 1-->
+          <section class="islands"><img class="islands__bg" src="./assets/img/01.jpg" alt="">
+            <div class="islands__container bd-container">
+              <div class="islands__data">
+                <h2 class="islands__subtitle">Islands 1</h2>
+                <h1 class="islands__title">Lorem, ipsum</h1>
+                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt uslands__button-icon"></i></a>
+              </div>
+              <div class="islands__video">
+                <div class="islands__video-content"><i class="bx bx-play-circle"></i></div>
+              </div>
+            </div>
+          </section>
+          <section class="islands"><img class="islands__bg" src="./assets/img/02.jpg" alt="">
+            <div class="islands__container bd-container">
+              <div class="islands__data">
+                <h2 class="islands__subtitle">Islands 2</h2>
+                <h1 class="islands__title">Lorem, ipsum</h1>
+                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt uslands__button-icon"></i></a>
+              </div>
+              <div class="islands__video">
+                <div class="islands__video-content"><i class="bx bx-play-circle"></i></div>
+              </div>
+            </div>
+          </section>
+          <section class="islands"><img class="islands__bg" src="./assets/img/03.jpg" alt="">
+            <div class="islands__container bd-container">
+              <div class="islands__data">
+                <h2 class="islands__subtitle">Islands 3</h2>
+                <h1 class="islands__title">Lorem, ipsum</h1>
+                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt uslands__button-icon"></i></a>
+              </div>
+              <div class="islands__video">
+                <div class="islands__video-content"><i class="bx bx-play-circle"></i></div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
     <!-- GSAP-->
     <script src="./node_modules/gsap/dist/gsap.min.js"> </script>
     <!-- SWIPER JS-->
