--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               <div class="islands__data">
                 <h2 class="islands__subtitle">Islands 1</h2>
                 <h1 class="islands__title">Lorem, ipsum</h1>
-                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt uslands__button-icon"></i></a>
+                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
               </div>
               <div class="islands__video">
-                <div class="islands__video-content"><i class="bx bx-play-circle"></i></div>
+                <div class="islands__video-content"><i class="bx bx-play-circle islands__video-icon"></i></div>
               </div>
             </div>
           </section>
@@ -49,10 +49,10 @@
               <div class="islands__data">
                 <h2 class="islands__subtitle">Islands 2</h2>
                 <h1 class="islands__title">Lorem, ipsum</h1>
-                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt uslands__button-icon"></i></a>
+                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
               </div>
               <div class="islands__video">
-                <div class="islands__video-content"><i class="bx bx-play-circle"></i></div>
+                <div class="islands__video-content"><i class="bx bx-play-circle islands__video-icon"></i></div>
               </div>
             </div>
           </section>
@@ -61,13 +61,19 @@
               <div class="islands__data">
                 <h2 class="islands__subtitle">Islands 3</h2>
                 <h1 class="islands__title">Lorem, ipsum</h1>
-                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt uslands__button-icon"></i></a>
+                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
               </div>
               <div class="islands__video">
-                <div class="islands__video-content"><i class="bx bx-play-circle"></i></div>
+                <div class="islands__video-content"><i class="bx bx-play-circle islands__video-icon"></i></div>
               </div>
             </div>
           </section>
+          <div class="islands__popup" id="popup">
+            <div> 
+              <div class="islands__popup-close" id="popup-close"><i class="bx bx-x"></i></div>
+              <iframe class="islands__popup-video" src="https://www.youtube.com/embed/6GBVaHH_6bQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </main>
