inte html: component controls

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- BOX ICONS -->
     <link rel="stylesheet" href="./node_modules/boxicons/css/boxicons.min.css">
     <!-- SWIPER CSS-->
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css">
     <!-- CSS-->
     <link rel="stylesheet" href="./assets/scss/index.css">
   </head>
@@ -31,7 +31,7 @@
     <main class="main">
       <div> 
         <div>
-          <!--islands 1-->
+          <!-- Islands-->
           <section class="islands"><img class="islands__bg" src="./assets/img/01.jpg" alt="">
             <div class="islands__container bd-container">
               <div class="islands__data">
@@ -68,10 +68,16 @@
               </div>
             </div>
           </section>
+          <!-- ISLANDS POPUP-->
           <div class="islands__popup" id="popup">
             <div> 
               <div class="islands__popup-close" id="popup-close"><i class="bx bx-x"></i></div>
               <iframe class="islands__popup-video" src="https://www.youtube.com/embed/6GBVaHH_6bQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <!-- CONTROLS-->
+          <div class="controls">
+            <div class="controls__container"><img class="controls__img" src="./assets/img/01.jpg" alt=""><img class="controls__img" src="./assets/img/02.jpg" alt=""><img class="controls__img" src="./assets/img/03.jpg" alt="">
             </div>
           </div>
         </div>
