--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           <section class="islands swiper-slide"><img class="islands__bg" src="./assets/img/01.jpg" alt="">
             <div class="islands__container bd-container">
               <div class="islands__data">
-                <h2 class="islands__subtitle">Islands 1</h2>
-                <h1 class="islands__title">Lorem, ipsum</h1>
-                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
+                <h2 class="test1 islands__subtitle">Islands 1</h2>
+                <h1 class="test2 islands__title">Lorem, ipsum</h1>
+                <p class="test3 islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="test4 islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
               </div>
               <div class="islands__video">
-                <div class="islands__video-content"><i class="bx bx-play-circle islands__video-icon"></i></div>
+                <div class="islands__video-content test5"><i class="bx bx-play-circle islands__video-icon"></i></div>
               </div>
             </div>
           </section>
@@ -51,12 +51,12 @@
           <section class="islands swiper-slide"><img class="islands__bg" src="./assets/img/02.jpg" alt="">
             <div class="islands__container bd-container">
               <div class="islands__data">
-                <h2 class="islands__subtitle">Islands 2</h2>
-                <h1 class="islands__title">Lorem, ipsum</h1>
-                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
+                <h2 class="test1 islands__subtitle">Islands 2</h2>
+                <h1 class="test2 islands__title">Lorem, ipsum</h1>
+                <p class="test3 islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="test4 islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
               </div>
               <div class="islands__video">
-                <div class="islands__video-content"><i class="bx bx-play-circle islands__video-icon"></i></div>
+                <div class="islands__video-content test5"><i class="bx bx-play-circle islands__video-icon"></i></div>
               </div>
             </div>
           </section>
@@ -64,12 +64,12 @@
           <section class="islands swiper-slide"><img class="islands__bg" src="./assets/img/03.jpg" alt="">
             <div class="islands__container bd-container">
               <div class="islands__data">
-                <h2 class="islands__subtitle">Islands 3</h2>
-                <h1 class="islands__title">Lorem, ipsum</h1>
-                <p class="islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
+                <h2 class="test1 islands__subtitle">Islands 3</h2>
+                <h1 class="test2 islands__title">Lorem, ipsum</h1>
+                <p class="test3 islands__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quae aliquid voluptas provident cumque quam</p><a class="test4 islands__button" href="#">Explore<i class="bx bx-right-arrow-alt islands__button-icon"></i></a>
               </div>
               <div class="islands__video">
-                <div class="islands__video-content"><i class="bx bx-play-circle islands__video-icon"></i></div>
+                <div class="islands__video-content test5"><i class="bx bx-play-circle islands__video-icon"></i></div>
               </div>
             </div>
           </section>
